# output_rectified_image

./: package.xml  setup.cfg  setup.py
launch/: image_rectified.launch.py
output_rectified_image/: undistorted_image_node.py
output_rectified_image_cpp/: CMakeLists.txt  package.xml
output_rectified_image_cpp/include/output_rectified_image/: output_rectified_image.hpp
output_rectified_image_cpp/launch/: output_rectified_image.launch.py
output_rectified_image_cpp/src/: output_rectified_image.cpp  output_rectified_image_node.cpp
output_rectified_image_py/: package.xml  setup.cfg  setup.py
output_rectified_image_py/output_rectified_image_py/: undistorted_image_node.py
